--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             background-color: #f0f0f0;
             font-family: "Prompt", sans-serif;
             color: #333;
-            margin: 0;
+            margin: 10px;
             padding: 0;
             display: flex;
             justify-content: center;
