--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         }
 
         .container {
+            margin-top: 0px;
             background-color: #fff;
             border-radius: 20px;
             box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
@@ -69,7 +70,7 @@
         form textarea {
             width: calc(100% - 20px);
             padding: 5px;
-            margin-bottom: 10px;
+            margin-bottom: 5px;
             border: 1px solid #ccc;
             border-radius: 5px;
             font-family: inherit;
