--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
             <!-- Form -->
             <form action="https://formbold.com/s/67KXD" method="POST" class="mb-5">
                 <h3>Contact</h3>
-                <input type="email" placeholder="Email" name="email">
+                <input required type="email" placeholder="Email" name="email">
                 <br>
-                <input type="text" placeholder="Subject" name="subject">
+                <input required type="text" placeholder="Subject" name="subject">
                 <br>
-                <textarea name="message" placeholder="Type your message"></textarea>
+                <textarea required name="message" placeholder="Type your message"></textarea>
                 <br>
                 <button type="submit">Send Message</button>
             </form>
