--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 <body>
     <div class="container">
-        <div class="content">
+        <div class="content m-0">
             <h1><b>Coming Soon ...</b></h1>
             <p>Our website is under construction. We'll be here soon with our new awesome site.</p>
             <img src="gear.svg" alt="Gear" class="logo-img">
@@ -109,11 +109,11 @@
             <!-- Form -->
             <form action="https://formbold.com/s/67KXD" method="POST" class="mb-5">
                 <h3>Contact</h3>
-                <input required type="email" placeholder="Email" name="email">
+                <input type="email" placeholder="Email" name="email" required>
                 <br>
-                <input required type="text" placeholder="Subject" name="subject">
+                <input type="text" placeholder="Subject" name="subject" required>
                 <br>
-                <textarea required name="message" placeholder="Type your message"></textarea>
+                <textarea name="message" placeholder="Type your message" required></textarea>
                 <br>
                 <button type="submit">Send Message</button>
             </form>
