--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <img src="gear.svg" alt="Gear" class="logo-img">
 
             <!-- Form -->
-            <form action="https://formbold.com/s/67KXD" method="POST" class="mb-5">
+            <form action="https://formbold.com/s/3NLqY" method="POST" class="mb-5">
                 <h3>Contact</h3>
                 <input type="email" placeholder="Email" name="email" required>
                 <br>
