--- a/index.html
+++ b/index.html
@@ -115,15 +115,25 @@
                 <br>
                 <textarea name="message" placeholder="Type your message" required></textarea>
                 <br>
-                <button type="submit">Send Message</button>
+                <button id="demo-form" data-sitekey="reCAPTCHA_site_key" 
+                    data-callback='onSubmit' 
+                    data-action='submit'>Send Message</button>
             </form>
             <!-- End Form -->
             <p>By <b>UNFA</b> 🐯</p>
         </div>
     </div>
 
+    <script>
+       function onSubmit(token) {
+         document.getElementById("demo-form").submit();
+       }
+     </script>
+
+
     <!-- Bootstrap JavaScript (optional, only needed if you use Bootstrap JS components) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js"></script>
 </body>
 
 </html>
