--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             transition: background-color 0.3s;
         }
 
-        form button[type="submit"]:hover {
+        form button:hover {
             background-color: #6a1b9a;
         }
     </style>
@@ -115,7 +115,7 @@
                 <br>
                 <textarea name="message" placeholder="Type your message" required></textarea>
                 <br>
-                <button data-sitekey="reCAPTCHA_site_key" 
+                <button data-sitekey="6LdZzt4pAAAAAJTWL1w4Hfz97DnlAqA9OdYdbvK7" 
                     data-callback='onSubmit' 
                     data-action='submit'>Send Message</button>
             </form>
