--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             height: 100px;
         }
 
-        form button[type="submit"] {
+        form button {
             background-color: #4a148c;
             color: #fff;
             padding: 10px 20px;
