--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
         form input:hover {
             background-color: #6a1b9a;
         }
+        .g-recaptcha{
+            margin-left: 10px;
+        }
     </style>
 </head>
 
@@ -122,13 +125,6 @@
             <p>By <b>UNFA</b> 🐯</p>
         </div>
     </div>
-
-    <script>
-       function onSubmit(token) {
-         document.getElementById("contact-form").submit();
-       }
-     </script>
-
 
     <!-- Bootstrap JavaScript (optional, only needed if you use Bootstrap JS components) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
