--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <br>
                 <textarea name="message" placeholder="Type your message" required></textarea>
                 <br>
-                <input type="submit" value="Send Message">
+                <button type="submit" value="Send Message"></button>
                 <div class="g-recaptcha" data-sitekey="6LdZzt4pAAAAAJTWL1w4Hfz97DnlAqA9OdYdbvK7"></div>
             </form>
             <!-- End Form -->
