--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             height: 100px;
         }
 
-        form input {
+        form button {
             background-color: #4a148c;
             color: #fff;
             padding: 10px 20px;
@@ -93,7 +93,7 @@
             transition: background-color 0.3s;
         }
 
-        form input:hover {
+        form button:hover {
             background-color: #6a1b9a;
         }
         .g-recaptcha{
@@ -118,7 +118,7 @@
                 <br>
                 <textarea name="message" placeholder="Type your message" required></textarea>
                 <br>
-                <button type="submit" value="Send Message"></button>
+                <button type="submit">Send Message</button>
                 <div class="g-recaptcha" data-sitekey="6LdZzt4pAAAAAJTWL1w4Hfz97DnlAqA9OdYdbvK7"></div>
             </form>
             <!-- End Form -->
