--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
             <!-- Form -->
             <form action="https://formbold.com/s/3NLqY" id="contact-form" method="POST" class="mb-5">
                 <h3>Contact</h3>
-                <input type="email" placeholder="Email" name="email" required>
+                <input type="email" placeholder="Email" name="email" maxlength="50" required>
                 <br>
-                <input type="text" placeholder="Subject" name="subject" required>
+                <input type="text" placeholder="Subject" name="subject" maxlength="20" required>
                 <br>
-                <textarea name="message" placeholder="Type your message" required></textarea>
+                <textarea name="message" placeholder="Type your message" maxlength="450" required></textarea>
                 <br>
                 <button type="submit">Send Message</button>
                 <div class="g-recaptcha" data-sitekey="6LdZzt4pAAAAAJTWL1w4Hfz97DnlAqA9OdYdbvK7"></div>
