--- a/index.html
+++ b/index.html
@@ -14,22 +14,23 @@
             background-color: #f0f0f0;
             font-family: "Prompt", sans-serif;
             color: #333;
-            margin: 10px;
+            margin: 0;
             padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
-            min-height: 100vh;
+            height: 100vh;
         }
 
         .container {
-            margin-top: 0px;
             background-color: #fff;
             border-radius: 20px;
             box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
             padding: 15px;
             max-width: 600px;
             text-align: center;
+            width: 100%;
+            box-sizing: border-box;
         }
 
         .logo-img {
@@ -50,8 +51,7 @@
             }
         }
 
-        h1,
-        p {
+        h1, p {
             color: #333;
         }
 
@@ -75,6 +75,7 @@
             border-radius: 5px;
             font-family: inherit;
             font-size: 16px;
+            box-sizing: border-box;
         }
 
         form textarea {
@@ -91,12 +92,14 @@
             width: calc(100% - 20px);
             font-size: 16px;
             transition: background-color 0.3s;
+            box-sizing: border-box;
         }
 
         form button:hover {
             background-color: #6a1b9a;
         }
-        .g-recaptcha{
+
+        .g-recaptcha {
             margin-left: 10px;
             margin-top: 5px;
         }
