--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <img src="gear.svg" alt="Gear" class="logo-img">
 
             <!-- Form -->
-            <form action="https://formbold.com/s/3NLqY" id="contact-form" method="POST" class="mb-5">
+            <!-- <form action="" id="contact-form" method="POST" class="mb-5">
                 <h3>Contact</h3>
                 <input type="email" placeholder="Email" name="email" maxlength="50" required>
                 <br>
@@ -156,8 +156,8 @@
                 <textarea name="message" placeholder="Type your message" maxlength="450" required></textarea>
                 <br>
                 <button type="submit">Send Message</button>
-                <div class="g-recaptcha" data-sitekey="6LdZzt4pAAAAAJTWL1w4Hfz97DnlAqA9OdYdbvK7"></div>
-            </form>
+                
+            </form> -->
             <!-- End Form -->
             <p>By 🐯</p>
         </div>
@@ -165,7 +165,6 @@
 
     <!-- Bootstrap JavaScript (optional, only needed if you use Bootstrap JS components) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://www.google.com/recaptcha/api.js"></script>
 </body>
 
 </html>
