--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <div class="container">
         <div class="content m-0">
             <h1><b>Coming Soon ...</b></h1>
-            <p>Our website is under construction. We'll be here soon with our new awesome site.</p>
+            <p class="mb-5">Our website is under construction. We'll be here soon with our new awesome site.</p>
             <img src="gear.svg" alt="Gear" class="logo-img">
 
             <!-- Form -->
