--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="content m-0">
             <h1><b>Coming Soon ...</b></h1>
             <p class="mb-3">Our website is under construction. We'll be here soon with our new awesome site.</p>
-            <img src="gear.svg" alt="Gear" class="logo-img MB-5">
+            <img src="gear.svg" alt="Gear" class="logo-img mb-5">
 
             <!-- Form -->
             <!-- <form action="" id="contact-form" method="POST" class="mb-5">
